--- a/sidebar/schulleben.html
+++ b/sidebar/schulleben.html
@@ -1,3 +1,9 @@
 <li>
   <a href="/Schulleben/Aktuelles/" id="Aktuelles">Aktuelles</a>
 </li>
+<li>
+  <a href="" id="Aktuelles">Studienfahrten</a>
+  <ul class="nav">
+    <li class="active"><a href="SF-Prag">Studienfahrt nach Prag</a></li>
+  </ul>
+</li>
