--- a/sidebar/schulleben.html
+++ b/sidebar/schulleben.html
@@ -2,8 +2,8 @@
   <a href="/Schulleben/Aktuelles/" id="Aktuelles">Aktuelles</a>
 </li>
 <li>
-  <a href="" id="Aktuelles">Studienfahrten</a>
+  <a href="">Studienfahrten</a>
   <ul class="nav">
-    <li class="active"><a href="SF-Prag">Studienfahrt nach Prag</a></li>
+    <li class="active"><a id="SF-Prag">Studienfahrt nach Prag</a></li>
   </ul>
 </li>
