--- a/footer.html
+++ b/footer.html
@@ -2,6 +2,7 @@
               <div class="footer">
                 <p>&copy; Friedrich-Eugens-Gymnasium Stuttgart 2013</p>
               </div>
+              <a href="https://github.com/feg-stuttgart/feg-stuttgart.github.io"><i class="fa fa-github"></i></a>
             </div> <!-- /Inhalt -->
           </div>
         </div>
