--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,6 @@
             <br>↑<a href="#nachoben"> nach oben</a> | ←<a href="javascript:history.back()" onmouseover="{window.status='Zurück'; return true;}">zurück</a><p>&nbsp;</p></p>
               <div class="footer">
+                <a href="https://github.com/feg-stuttgart"></a><i class="fa fa-github"></i></a>
                 <p>&copy; Friedrich-Eugens-Gymnasium Stuttgart 2013</p>
               </div>
               <a href="https://github.com/feg-stuttgart/feg-stuttgart.github.io"><i class="fa fa-github"></i></a>
