--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
                 <a href="https://github.com/feg-stuttgart"></a><i class="fa fa-github"></i></a>
                 <p>&copy; Friedrich-Eugens-Gymnasium Stuttgart 2013</p>
               </div>
-              <a href="https://github.com/feg-stuttgart"><i class="fa fa-github"></i> Auf Github anzeigen</a>
+              <a href="https://github.com/feg-stuttgart"><i class="fa fa-github fa-3x"></i> Auf Github anzeigen</a>
             </div> <!-- /Inhalt -->
           </div>
         </div>
