--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,8 @@
             <br>↑<a href="#nachoben"> nach oben</a> | ←<a href="javascript:history.back()" onmouseover="{window.status='Zurück'; return true;}">zurück</a><p>&nbsp;</p></p>
               <div class="footer">
-                <a href="https://github.com/feg-stuttgart"></a><i class="fa fa-github"></i></a>
+                <a href="https://github.com/feg-stuttgart"><i class="fa fa-github fa-1g"></i> Auf Github anzeigen</a>
                 <p>&copy; Friedrich-Eugens-Gymnasium Stuttgart 2013</p>
               </div>
-              <a href="https://github.com/feg-stuttgart"><i class="fa fa-github fa-3x"></i> Auf Github anzeigen</a>
             </div> <!-- /Inhalt -->
           </div>
         </div>
