--- a/css.html
+++ b/css.html
@@ -1,10 +1,10 @@
 <!-- Basis CSS -->
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Erweitertes Basis-CSS -->
+<!-- 3D-CSS -->
 <link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
-<!-- Verwendung unklar -->
+<!-- Icons -->
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
 <!-- Navigation -->
