--- a/sidebar/impressum.html
+++ b/sidebar/impressum.html
@@ -11,5 +11,5 @@
   <a href="/Impressum/Routenplaner/" id="Routenplaner">Routenplaner</a>
 </li>
 <li>
-  <a href="/Impressum/Unterrichtszeiten/" id="Unterrichtszeiten">Unterrichtszeiten</a>
+  <i class="fa fa-clock-o"></i><a href="/Impressum/Unterrichtszeiten/" id="Unterrichtszeiten">Unterrichtszeiten</a>
 </li>
