--- a/sidebar/impressum.html
+++ b/sidebar/impressum.html
@@ -8,7 +8,7 @@
   <a href="/Impressum/Anfahrt/" id="Anfahrt">Anfahrt</a>
 </li>
 <li>
-  <a href="/Impressum/Routenplaner/" id="Routenplaner">Routenplaner</a>
+  <a href="/Impressum/Routenplaner/" id="Routenplaner"><i class="fa fa-compass"></i> Routenplaner</a>
 </li>
 <li>
   <a href="/Impressum/Unterrichtszeiten/" id="Unterrichtszeiten"><i class="fa fa-clock-o"></i> Unterrichtszeiten</a>
