--- a/sidebar/impressum.html
+++ b/sidebar/impressum.html
@@ -1,5 +1,5 @@
 <li>
-  <a href="/Impressum/Kontakt/" id="Kontakt">Kontakt</a>
+  <a href="/Impressum/Kontakt/" id="Kontakt"><i class="fa fa-envelope"></i> Kontakt</a>
 </li>
 <li>
   <a href="/Impressum/Impressum/" id="Impressum">Impressum</a>
