--- a/sidebar/impressum.html
+++ b/sidebar/impressum.html
@@ -2,7 +2,7 @@
   <a href="/Impressum/Kontakt/" id="Kontakt"><i class="fa fa-envelope"></i> Kontakt</a>
 </li>
 <li>
-  <a href="/Impressum/Impressum/" id="Impressum">Impressum</a>
+  <a href="/Impressum/Impressum/" id="Impressum"><i class="fa fa-pencil-square-o"></i> Impressum</a>
 </li>
 <li>
   <a href="/Impressum/Anfahrt/" id="Anfahrt">Anfahrt</a>
