--- a/sidebar/impressum.html
+++ b/sidebar/impressum.html
@@ -5,7 +5,7 @@
   <a href="/Impressum/Impressum/" id="Impressum"><i class="fa fa-pencil-square-o"></i> Impressum</a>
 </li>
 <li>
-  <a href="/Impressum/Anfahrt/" id="Anfahrt">Anfahrt</a>
+  <a href="/Impressum/Anfahrt/" id="Anfahrt"><i class="fa fa-road"></i> Anfahrt</a>
 </li>
 <li>
   <a href="/Impressum/Routenplaner/" id="Routenplaner"><i class="fa fa-compass"></i> Routenplaner</a>
