--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-            <br>↑<a href="#nachoben"> nach oben</a> | ←<a href="javascript:history.back()" onmouseover="{window.status='Zurück'; return true;}">zurück</a><p>&nbsp;</p></p>
+            <br><a href="#nachoben"><i class="fa fa-arrow-up"></i> nach oben</a> | <a href="javascript:history.back()" onmouseover="{window.status='Zurück'; return true;}"><i class="fa fa-arrow-left"></i> zurück</a><p>&nbsp;</p></p>
               <div class="footer">
                 <a href="https://github.com/feg-stuttgart"><i class="fa fa-github fa-1g"></i> Auf Github anzeigen</a>
                 <p>&copy; Friedrich-Eugens-Gymnasium Stuttgart 2013</p>
