--- a/css.html
+++ b/css.html
@@ -2,7 +2,8 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- 3D-CSS -->
-<link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+<!-- link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet" -->
+<link href="https://cdn.mediencenter.t-online.de/dl/5faea0a1254ffadefb9111a0496ddb6c/52ab19ec/rawstore/storage/1e9/da3/k87hsoh6-tztp4pudbucpo0g0atqgaalhuv1vpnuz7g1386944976072.css/a/bootstrap-theme.min.css" rel="stylesheet">
 
 <!-- Icons -->
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
