--- a/css.html
+++ b/css.html
@@ -9,7 +9,8 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
 <!-- Navigation -->
-<link href="http://getbootstrap.com/examples/justified-nav/justified-nav.css" rel="stylesheet">
+<!-- link href="http://getbootstrap.com/examples/justified-nav/justified-nav.css" rel="stylesheet" -->
+<link href="https://cdn.mediencenter.t-online.de/dl/af3e6b58b8348c0392d5f98137bb106e/52ab1bc8/rawstore/storage/486/58a/rknvb5rzfdw4o_awiinuquch9njvzj7u4wfiic1dt9i1386945437170.css/a/justified-nav.css" rel="stylesheet">
 
 <!-- Verbesserung der Text-Darstellung -->
 <link href="http://getbootstrap.com/docs-assets/css/docs.css" rel="stylesheet">
