--- a/css.html
+++ b/css.html
@@ -13,8 +13,10 @@
 <link href="https://cdn.mediencenter.t-online.de/dl/af3e6b58b8348c0392d5f98137bb106e/52ab1bc8/rawstore/storage/486/58a/rknvb5rzfdw4o_awiinuquch9njvzj7u4wfiic1dt9i1386945437170.css/a/justified-nav.css" rel="stylesheet">
 
 <!-- Verbesserung der Text-Darstellung -->
-<link href="http://getbootstrap.com/docs-assets/css/docs.css" rel="stylesheet">
-<link href="http://getbootstrap.com/docs-assets/css/pygments-manni.css" rel="stylesheet">
+<!-- link href="http://getbootstrap.com/docs-assets/css/docs.css" rel="stylesheet" -->
+<!-- link href="http://getbootstrap.com/docs-assets/css/pygments-manni.css" rel="stylesheet" -->
+<link href="https://cdn.mediencenter.t-online.de/dl/b1fe19d042e2e469bda46f95f71e3432/52ab1cf2/rawstore/storage/e31/bcb/lvzeud21dudtoihweldwyfsk35u-38k1mz-spel5w3q1386945731080.css/a/docs.css" rel="stylesheet">
+<link href="https://cdn.mediencenter.t-online.de/dl/403e6735cf9cc341e4c1563b0e6401ee/52ab1cf2/rawstore/storage/c06/cce/a--84zj0j6sk5crmyy4buu646pq4qh_5b3ucun4re3e1386945741486.css/a/pygments-manni.css" rel="stylesheet">
 
 <!-- Bildergalerie -->
 <link rel="stylesheet" type="text/css" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
