--- a/js.html
+++ b/js.html
@@ -8,11 +8,11 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
 <!-- Verbesserte Textdarstellung -->
-<script src="https://cdn.mediencenter.t-online.de/dl/1ebba0a30fe0b0298c78581a10809b8f/52ab251f/rawstore/storage/de2/644/aqrqnbrghyyhtfxf-f0byq3i6wt1tp3bkkohthc2twq1386947579356.js/a/holder.js"></script>
-<script src="https://cdn.mediencenter.t-online.de/dl/b4b56d2a651f65573b8d415afa23fb19/52ab251f/rawstore/storage/114/e37/eutqhatmdbvoxdeznychkpyyziqz5azsvt6e01is8ru1386947566201.js/a/application.js"></script>
+<script src="http://getbootstrap.com/docs-assets/js/holder.js"></script>
+<script src="http://getbootstrap.com/docs-assets/js/application.js"></script>
 
 <!-- Bildergalerie -->
-<script src="https://cdn.mediencenter.t-online.de/dl/7871ad55f33b29a241e084dc1c0422dd/52ab251f/rawstore/storage/9c0/333/4eypzusdyqzevcv7phciwrobubu1ad40gottvfcmy681386947574558.js/a/blueimp-gallery.min.js"></script>
+<script src="http://blueimp.github.io/Gallery/js/blueimp-gallery.min.js"></script>
 <script>
 document.getElementById('links').onclick = function (event) {
   event = event || window.event;
