--- a/js.html
+++ b/js.html
@@ -32,3 +32,15 @@ document.getElementById('links').onclick = function (event) {
 var myObj = document.getElementById("{{ page.title }}");
 myObj.style.color="black";
 </script>
+<script>
+var _prum = [['id', '52ab4220abe53d5624000000'],
+             ['mark', 'firstbyte', (new Date()).getTime()]];
+(function() {
+    var s = document.getElementsByTagName('script')[0]
+      , p = document.createElement('script');
+    p.async = 'async';
+    p.src = '//rum-static.pingdom.net/prum.min.js';
+    s.parentNode.insertBefore(p, s);
+})();
+</script>
+    
