--- a/js.html
+++ b/js.html
@@ -32,6 +32,8 @@ document.getElementById('links').onclick = function (event) {
 var myObj = document.getElementById("{{ page.title }}");
 myObj.style.color="black";
 </script>
+
+<!-- Pingdom -->
 <script>
 var _prum = [['id', '52ab4220abe53d5624000000'],
              ['mark', 'firstbyte', (new Date()).getTime()]];
@@ -42,5 +44,17 @@ var _prum = [['id', '52ab4220abe53d5624000000'],
     p.src = '//rum-static.pingdom.net/prum.min.js';
     s.parentNode.insertBefore(p, s);
 })();
+</script>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41771671-2', 'feg-stuttgart.github.io');
+  ga('send', 'pageview');
+
 </script>
     
