--- a/js.html
+++ b/js.html
@@ -54,6 +54,7 @@ var _prum = [['id', '52ab4220abe53d5624000000'],
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-41771671-2', 'feg-stuttgart.github.io');
+  ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
 
 </script>
