--- a/css.html
+++ b/css.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
 <!-- 3D-CSS -->
-<link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+<link href="//cdn.jsdelivr.net/bootstrap/3.0.3/css/bootstrap-theme.min.css" rel="stylesheet">
 
 <!-- Icons -->
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
