--- a/css.html
+++ b/css.html
@@ -1,19 +1,18 @@
 <!-- Basis CSS -->
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/bootstrap/">
 
 <!-- 3D-CSS -->
-<link href="//cdn.jsdelivr.net/bootstrap/3.0.3/css/bootstrap-theme.min.css" rel="stylesheet">
+<link href="//youreevil.pf-control.de/cdn/css/bootstrap-theme/" rel="stylesheet">
 
 <!-- Icons -->
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/font-awesome/" rel="stylesheet">
 
 <!-- Navigation -->
-<link href="http://getbootstrap.com/examples/justified-nav/justified-nav.css" rel="stylesheet">
+<link href="//youreevil.pf-control.de/cdn/css/justified/" rel="stylesheet">
 
 <!-- Verbesserung der Text-Darstellung -->
-<link href="http://getbootstrap.com/docs-assets/css/docs.css" rel="stylesheet">
-<link href="http://getbootstrap.com/docs-assets/css/pygments-manni.css" rel="stylesheet">
+<link href="//youreevil.pf-control.de/cdn/css/docs/" rel="stylesheet">
+<!-- link href="http://getbootstrap.com/docs-assets/css/pygments-manni.css" rel="stylesheet" -->
 
 <!-- Bildergalerie -->
-<link rel="stylesheet" type="text/css" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
-
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/blueimp-gallery/>
