--- a/css.html
+++ b/css.html
@@ -15,4 +15,4 @@
 <!-- link href="http://getbootstrap.com/docs-assets/css/pygments-manni.css" rel="stylesheet" -->
 
 <!-- Bildergalerie -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/blueimp-gallery/>
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/blueimp-gallery/">
