--- a/css.html
+++ b/css.html
@@ -2,17 +2,17 @@
 <link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/bootstrap/">
 
 <!-- 3D-CSS -->
-<link href="//youreevil.pf-control.de/cdn/css/bootstrap-theme/" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/bootstrap-theme/">
 
 <!-- Icons -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/font-awesome/" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/font-awesome/">
 
 <!-- Navigation -->
-<link href="//youreevil.pf-control.de/cdn/css/justified/" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/justified/">
 
 <!-- Verbesserung der Text-Darstellung -->
-<link href="//youreevil.pf-control.de/cdn/css/docs/" rel="stylesheet">
-<!-- link href="http://getbootstrap.com/docs-assets/css/pygments-manni.css" rel="stylesheet" -->
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/docs/">
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/pygments/">
 
 <!-- Bildergalerie -->
 <link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/blueimp-gallery/">
