--- a/js.html
+++ b/js.html
@@ -1,31 +1,20 @@
 <!-- jQuery -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="//youreevil.pf-control.de/cdn/js/jquery/"></script>
 
 <!-- Erweitertes jQuery-->
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="//youreevil.pf-control.de/cdn/js/jquery-ui/"></script>
 
 <!-- Resposives Design-->
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script src="//youreevil.pf-control.de/cdn/js/bootstrap/"></script>
 
 <!-- Verbesserte Textdarstellung -->
-<script src="http://getbootstrap.com/docs-assets/js/holder.js"></script>
-<script src="http://getbootstrap.com/docs-assets/js/application.js"></script>
+<script src="//youreevil.pf-control.de/cdn/js/holder/"></script>
 
 <!-- Bildergalerie -->
-<script src="http://blueimp.github.io/Gallery/js/blueimp-gallery.min.js"></script>
-<script>
-document.getElementById('links').onclick = function (event) {
-  event = event || window.event;
-  var target = event.target || event.srcElement,
-    link = target.src ? target.parentNode : target,
-    options = {index: link, event: event},
-    links = this.getElementsByTagName('a');
-  blueimp.Gallery(links, options);
-};
-</script>
+<script src="//youreevil.pf-control.de/cdn/js/blueimp-gallery/"></script>
 
 <!-- Ältere Browser -->
-<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+<script src="//youreevil.pf-control.de/cdn/js/chrome-frame/"></script>
 
 <!-- Unternavigation -->
 <script>
@@ -46,3 +35,14 @@ var _prum = [['id', '52ab4220abe53d5624000000'],
 })();
 </script>
 
+<!-- Bildergalerie -->
+<script>
+document.getElementById('links').onclick = function (event) {
+  event = event || window.event;
+  var target = event.target || event.srcElement,
+    link = target.src ? target.parentNode : target,
+    options = {index: link, event: event},
+    links = this.getElementsByTagName('a');
+  blueimp.Gallery(links, options);
+};
+</script>
