--- a/css.html
+++ b/css.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/bootstrap-theme/">
 
 <!-- Icons -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/font-awesome/">
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 
 <!-- Navigation -->
 <link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/justified/">
