--- a/css.html
+++ b/css.html
@@ -1,18 +1,6 @@
-<!-- Basis CSS -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/bootstrap/">
-
-<!-- 3D-CSS -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/bootstrap-theme/">
+<!-- All-in-one -->
+<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/">
 
 <!-- Icons -->
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 
-<!-- Navigation -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/justified/">
-
-<!-- Verbesserung der Text-Darstellung -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/docs/">
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/pygments/">
-
-<!-- Bildergalerie -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/blueimp-gallery/">
