--- a/js.html
+++ b/js.html
@@ -1,48 +1,3 @@
 <!-- jQuery -->
-<script src="//youreevil.pf-control.de/cdn/js/jquery/"></script>
+<script src="//youreevil.pf-control.de/cdn/js/"></script>
 
-<!-- Erweitertes jQuery-->
-<script src="//youreevil.pf-control.de/cdn/js/jquery-ui/"></script>
-
-<!-- Resposives Design-->
-<script src="//youreevil.pf-control.de/cdn/js/bootstrap/"></script>
-
-<!-- Verbesserte Textdarstellung -->
-<script src="//youreevil.pf-control.de/cdn/js/holder/"></script>
-
-<!-- Bildergalerie -->
-<script src="//youreevil.pf-control.de/cdn/js/blueimp-gallery/"></script>
-
-<!-- Ältere Browser -->
-<script src="//youreevil.pf-control.de/cdn/js/chrome-frame/"></script>
-
-<!-- Unternavigation -->
-<script>
-var myObj = document.getElementById("{{ page.title }}");
-myObj.style.color="black";
-</script>
-
-<!-- Pingdom -->
-<script>
-var _prum = [['id', '52ab4220abe53d5624000000'],
-             ['mark', 'firstbyte', (new Date()).getTime()]];
-(function() {
-    var s = document.getElementsByTagName('script')[0]
-      , p = document.createElement('script');
-    p.async = 'async';
-    p.src = '//rum-static.pingdom.net/prum.min.js';
-    s.parentNode.insertBefore(p, s);
-})();
-</script>
-
-<!-- Bildergalerie -->
-<script>
-document.getElementById('links').onclick = function (event) {
-  event = event || window.event;
-  var target = event.target || event.srcElement,
-    link = target.src ? target.parentNode : target,
-    options = {index: link, event: event},
-    links = this.getElementsByTagName('a');
-  blueimp.Gallery(links, options);
-};
-</script>
