--- a/js.html
+++ b/js.html
@@ -1,3 +1,8 @@
 <!-- jQuery -->
 <script src="//youreevil.pf-control.de/cdn/js/"></script>
 
+<!-- Navigation -->
+<script>
+var myObj = document.getElementById("{{ page.title }}");
+myObj.style.color="black";
+</script>
