--- a/css.html
+++ b/css.html
@@ -1,3 +1,3 @@
 <!-- All-in-one -->
-<link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/">
+<link rel="stylesheet" type="text/css" href="http://feg.cdnconnect.com/css/index.css">
 
