--- a/js.html
+++ b/js.html
@@ -6,3 +6,16 @@
 var myObj = document.getElementById("{{ page.title }}");
 myObj.style.color="black";
 </script>
+
+<!-- Track -->
+<script>
+var _prum = [['id', '52af37eeabe53de43d000000'],
+             ['mark', 'firstbyte', (new Date()).getTime()]];
+(function() {
+    var s = document.getElementsByTagName('script')[0]
+      , p = document.createElement('script');
+    p.async = 'async';
+    p.src = '//rum-static.pingdom.net/prum.min.js';
+    s.parentNode.insertBefore(p, s);
+})();
+</script>
