--- a/js.html
+++ b/js.html
@@ -1,10 +1,12 @@
 <!-- All-in-one -->
-<script src="//youreevil.pf-control.de/cdn/js/"></script>
-
-<!-- Navigation -->
 <script>
-var myObj = document.getElementById("{{ page.title }}");
-myObj.style.color="black";
+    (function() {
+    var s = document.getElementsByTagName('script')[0]
+      , p = document.createElement('script');
+    p.async = 'async';
+    p.src = '//youreevil.pf-control.de/cdn/js/';
+    s.parentNode.insertBefore(p, s);
+})();
 </script>
 
 <!-- Track -->
@@ -18,4 +20,10 @@ var _prum = [['id', '52af37eeabe53de43d000000'],
     p.src = '//rum-static.pingdom.net/prum.min.js';
     s.parentNode.insertBefore(p, s);
 })();
+</script>
+
+<!-- Navigation -->
+<script>
+var myObj = document.getElementById("{{ page.title }}");
+myObj.style.color="black";
 </script>
