--- a/js.html
+++ b/js.html
@@ -4,7 +4,7 @@
     var s = document.getElementsByTagName('script')[0]
       , p = document.createElement('script');
     p.async = 'async';
-    p.src = '//youreevil.pf-control.de/cdn/js/';
+    p.src = '//youreevil.pf-control.de/cdn/js/index.js';
     s.parentNode.insertBefore(p, s);
 })();
 </script>
