--- a/head.html
+++ b/head.html
@@ -9,6 +9,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  {% include css.html %}
+  <link></link>
    
  </head> 
