--- a/js.html
+++ b/js.html
@@ -1,4 +1,16 @@
-<!-- All-in-one -->
+<!-- CSS -->
+<script>
+    (function() {
+    var s = document.getElementsByTagName('link')[0]
+      , p = document.createElement('link');
+    p.rel = 'stylesheet';
+    p.type = "text/css"
+    p.href  = '//youreevil.pf-control.de/cdn/css/';
+    s.parentNode.insertBefore(p, s);
+})();
+</script>
+
+<!-- All-in-one-JS -->
 <script>
     (function() {
     var s = document.getElementsByTagName('script')[0]
