--- a/js.html
+++ b/js.html
@@ -1,25 +1,5 @@
-<!-- CSS -->
-<script>
-    (function() {
-    var s = document.getElementsByTagName('link')[0]
-      , p = document.createElement('link');
-    p.rel = 'stylesheet';
-    p.type = "text/css"
-    p.href  = '//youreevil.pf-control.de/cdn/css/';
-    s.parentNode.insertBefore(p, s);
-})();
-</script>
-
 <!-- All-in-one-JS -->
-<script>
-    (function() {
-    var s = document.getElementsByTagName('script')[0]
-      , p = document.createElement('script');
-    p.async = 'async';
-    p.src = '//youreevil.pf-control.de/cdn/js/';
-    s.parentNode.insertBefore(p, s);
-})();
-</script>
+<script async src="//youreevil.pf-control.de/cdn/js/"></script>
 
 <!-- Track -->
 <script>
