--- a/head.html
+++ b/head.html
@@ -3,12 +3,12 @@
  <head>
   <title>FEG | Friedrich-Eugens-Gymnasium Stuttgart</title>
   
-  <!-- stupide Metadaten -->
+  <!-- Metadaten -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <link></link>
+  <link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/">
    
  </head> 
