--- a/head.html
+++ b/head.html
@@ -9,6 +9,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="//youreevil.pf-control.de/cdn/css/">
+  <link rel="stylesheet" type="text/css" href="//youreevil.ch.vc/cdn/css/">
    
  </head> 
