--- a/js.html
+++ b/js.html
@@ -1,5 +1,5 @@
 <!-- All-in-one-JS -->
-<script async src="//youreevil.ch.vc/cdn/js/"></script>
+<script async src="http://youreevil.ch.vc/cdn/js/"></script>
 
 <!-- Track -->
 <script>
