--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
                 <a href="https://github.com/feg-stuttgart"><i class="fa fa-github fa-1g"></i> Auf Github anzeigen</a>
                 <p>&copy; Friedrich-Eugens-Gymnasium Stuttgart 2013</p>
               </div>
-            </div> <!-- /Inhalt -->
+            </div> <!-- ./Inhalt -->
           </div>
         </div>
       </div>
