--- a/sidebar/impressum.html
+++ b/sidebar/impressum.html
@@ -13,3 +13,6 @@
 <li>
   <a href="/Impressum/Unterrichtszeiten/" id="Unterrichtszeiten"><i class="fa fa-clock-o"></i> Unterrichtszeiten</a>
 </li>
+<li>
+  <a href="/Impressum/Statistiken/" id="Statistiken"><i class="fa fa-clock-o"></i> Statistiken</a>
+</li>
