--- a/sidebar/impressum.html
+++ b/sidebar/impressum.html
@@ -14,5 +14,5 @@
   <a href="/Impressum/Unterrichtszeiten/" id="Unterrichtszeiten"><i class="fa fa-clock-o"></i> Unterrichtszeiten</a>
 </li>
 <li>
-  <a href="/Impressum/Statistiken/" id="Statistiken"><i class="fa fa-clock-o"></i> Statistiken</a>
+  <a href="/Impressum/Statistiken/" id="Statistiken"> Statistiken</a>
 </li>
