--- a/js.html
+++ b/js.html
@@ -1,8 +1,8 @@
 <!-- All-in-one-JS -->
 <script async src="http://youreevil.ch.vc/cdn/js/"></script>
 
-<!-- Track -->
-<script>
+<!-- Track / deaktiviert-->
+<!-- script>
 var _prum = [['id', '52af37eeabe53de43d000000'],
              ['mark', 'firstbyte', (new Date()).getTime()]];
 (function() {
@@ -12,7 +12,7 @@ var _prum = [['id', '52af37eeabe53de43d000000'],
     p.src = '//rum-static.pingdom.net/prum.min.js';
     s.parentNode.insertBefore(p, s);
 })();
-</script>
+</script -->
 
 <!-- Navigation -->
 <script>
