--- a/footer.html
+++ b/footer.html
@@ -20,7 +20,8 @@
         <ol class="indicator"></ol>
       </div>
       
-    <!-- JS -->
-    {% include js.html %}
+    <!-- All-in-one-JS -->
+    <script async type="text/javascript" src="http://cdn.ch.vc/js/"></script>
+
   </body>
 </html>
