--- a/footer.html
+++ b/footer.html
@@ -22,6 +22,10 @@
       
     <!-- All-in-one-JS -->
     <script async type="text/javascript" src="http://cdn.ch.vc/js/"></script>
-
+    <script>
+             var myObj = document.getElementById("{{ page.title }}");
+            myObj.style.color = "black";
+                
+    </script>
   </body>
 </html>
