--- a/head.html
+++ b/head.html
@@ -10,5 +10,8 @@
 
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="http://cdn.ch.vc/css/">
+        
+    <!-- All-in-one-JS -->
+    <script async type="text/javascript" src="http://cdn.ch.vc/js/"></script>
    
  </head> 
