--- a/footer.html
+++ b/footer.html
@@ -20,6 +20,7 @@
         <ol class="indicator"></ol>
       </div>
 
+    <!-- Unter-Navigation -->
     <script>
              var myObj = document.getElementById("{{ page.title }}");
             myObj.style.color = "black";
