--- a/head.html
+++ b/head.html
@@ -12,6 +12,7 @@
     
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="http://cdn.ch.vc/css/">
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     
     <!-- All-in-one-JS -->
    <script async type="text/javascript" src="http://cdn.ch.vc/js/">
