--- a/sidebar/portrait.html
+++ b/sidebar/portrait.html
@@ -11,7 +11,7 @@
   <a href="/Portrait/Unterrichtsprofil/" id="Unterrichtsprofil">Unterrichtsprofil</a>
 </li>
 <li>
-  <a href="/Portrait/Fordern und Foerdern/" id="Fordern und Foerdern">Fordern und Fördern</a>
+  <a href="/Portrait/Fordern-und-Foerdern/" id="Fordern und Foerdern">Fordern und Fördern</a>
 </li>
 <li>
   <a href="/Portrait/Aktivitaeten/" id="Aktivitaeten">Aktivitäten</a>
