--- a/sidebar/portrait_Geschichte-des-FEG.html
+++ b/sidebar/portrait_Geschichte-des-FEG.html
@@ -26,12 +26,12 @@
     <li><a href="/Portrait/Geschichte-des-FEG/2/">Dr. Werner Abelein</a></li>
   </ul>
 </li>
-<li class="active">
+<li>
   <a href="#migration">Migrating from 2.x to 3.0</a>
   <ul class="nav">
-    <li class="active"><a href="#migration-classes">Major class changes</a></li>
-    <li class=""><a href="#migration-new">What's new</a></li>
-    <li class=""><a href="#migration-dropped">What's removed</a></li>
+    <li><a href="#migration-classes">Major class changes</a></li>
+    <li><a href="#migration-new">What's new</a></li>
+    <li><a href="#migration-dropped">What's removed</a></li>
     <li><a href="#migration-notes">Additional notes</a></li>
   </ul>
 </li>
