--- a/sidebar/portrait_Geschichte-des-FEG.html
+++ b/sidebar/portrait_Geschichte-des-FEG.html
@@ -19,20 +19,11 @@
 <li>
   <a href="/Portrait/Nachmittagsbetreuung/" id="Nachmittagsbetreuung">Nachmittagsbetreuung</a>
 </li>
-<li>
+<li class="active">
   <a href="/Portrait/Geschichte-des-FEG/" id="Geschichte-des-FEG">Geschichte des FEG</a>
   <ul class="nav">
     <li><a href="/Portrait/Geschichte-des-FEG/1/">Gerhard Schlecht</a></li>
     <li><a href="/Portrait/Geschichte-des-FEG/2/">Dr. Werner Abelein</a></li>
-  </ul>
-</li>
-<li>
-  <a href="#migration">Migrating from 2.x to 3.0</a>
-  <ul class="nav">
-    <li><a href="#migration-classes">Major class changes</a></li>
-    <li><a href="#migration-new">What's new</a></li>
-    <li><a href="#migration-dropped">What's removed</a></li>
-    <li><a href="#migration-notes">Additional notes</a></li>
   </ul>
 </li>
 <li>
