--- a/sidebar/portrait_Geschichte-des-FEG.html
+++ b/sidebar/portrait_Geschichte-des-FEG.html
@@ -22,8 +22,8 @@
 <li class="active">
   <a href="/Portrait/Geschichte-des-FEG/" id="Geschichte-des-FEG">Geschichte des FEG</a>
   <ul class="nav">
-    <li><a href="/Portrait/Geschichte-des-FEG/1/">Gerhard Schlecht</a></li>
-    <li><a href="/Portrait/Geschichte-des-FEG/2/">Dr. Werner Abelein</a></li>
+    <li><a href="/Portrait/Geschichte-des-FEG/1/" id="Geschichte-des-FEG/1">Gerhard Schlecht</a></li>
+    <li><a href="/Portrait/Geschichte-des-FEG/2/"id="Geschichte-des-FEG/2">Dr. Werner Abelein</a></li>
   </ul>
 </li>
 <li>
