--- a/sidebar/portrait.html
+++ b/sidebar/portrait.html
@@ -1,26 +1,26 @@
-<li>
-  <a href="/Portrait/Begruessung/" id="Begruessung">Begrüßung</a>
+<li id="Begruessung">
+  <a href="/Portrait/Begruessung/">Begrüßung</a>
 </li>
-<li>
-  <a href="/Portrait/Kollegium/" id="Kollegium">Kollegium</a>
+<li id="Kollegium">
+  <a href="/Portrait/Kollegium/">Kollegium</a>
 </li>
-<li>
-  <a href="/Portrait/Selbstverstaendnis/" id="Selbstverstaendnis">Selbstverständnis</a>
+<li id="Selbstverstaendnis">
+  <a href="/Portrait/Selbstverstaendnis/">Selbstverständnis</a>
 </li>
-<li>
-  <a href="/Portrait/Unterrichtsprofil/" id="Unterrichtsprofil">Unterrichtsprofil</a>
+<li id="Unterrichtsprofil">
+  <a href="/Portrait/Unterrichtsprofil/">Unterrichtsprofil</a>
 </li>
-<li>
-  <a href="/Portrait/Fordern-und-Foerdern/" id="Fordern und Foerdern">Fordern und Fördern</a>
+<li id="Fordern und Foerdern">
+  <a href="/Portrait/Fordern-und-Foerdern/">Fordern und Fördern</a>
 </li>
-<li>
-  <a href="/Portrait/Aktivitaeten/" id="Aktivitaeten">Aktivitäten</a>
+<li id="Aktivitaeten">
+  <a href="/Portrait/Aktivitaeten/">Aktivitäten</a>
 </li>
-<li>
-  <a href="/Portrait/Nachmittagsbetreuung/" id="Nachmittagsbetreuung">Nachmittagsbetreuung</a>
+<li id="Nachmittagsbetreuung">
+  <a href="/Portrait/Nachmittagsbetreuung/">Nachmittagsbetreuung</a>
 </li>
-<li>
-  <a href="/Portrait/Geschichte-des-FEG/" id="Geschichte-des-FEG">Geschichte des FEG</a>
+<li id="Geschichte-des-FEG">
+  <a href="/Portrait/Geschichte-des-FEG/">Geschichte des FEG</a>
 </li>
 <li>
   <a href="/Portrait/FEG-Forum/" id="FEG-Forum">FEG-Forum</a>
