--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
     <!-- Unter-Navigation -->
     <script>
              var myObj = document.getElementById("{{ page.title }}");
-            myObj.style.color = "black";
+            myObj.className = "active";
                 
     </script>
   </body>
