--- a/sidebar/portrait.html
+++ b/sidebar/portrait.html
@@ -1,5 +1,5 @@
 <li id="Begruessung">
-  <a href="/Portrait/Begruessung/">Begrüßung</a>
+  <a href="/Portrait/Begruessung/" id="Begruessung">Begrüßung</a>
 </li>
 <li id="Kollegium">
   <a href="/Portrait/Kollegium/">Kollegium</a>
