--- a/footer.html
+++ b/footer.html
@@ -24,6 +24,7 @@
     <script>
              var myObj = document.getElementById("{{ page.title }}");
             myObj.className = "active";
+            myObj.style.color ="black";
                 
     </script>
   </body>
