--- a/sidebar/portrait.html
+++ b/sidebar/portrait.html
@@ -1,61 +1,100 @@
 <li id="Begruessung">
-  <a href="/Portrait/Begruessung/" id="Begruessung">Begrüßung</a>
+  <a href="/Portrait/Begruessung/" id="Begruessung">
+    Begrüßung
+  </a>
 </li>
 <li id="Kollegium">
-  <a href="/Portrait/Kollegium/">Kollegium</a>
+  <a href="/Portrait/Kollegium/">
+    Kollegium
+  </a>
 </li>
 <li id="Selbstverstaendnis">
-  <a href="/Portrait/Selbstverstaendnis/">Selbstverständnis</a>
+  <a href="/Portrait/Selbstverstaendnis/">
+    Selbstverständnis
+  </a>
 </li>
 <li id="Unterrichtsprofil">
-  <a href="/Portrait/Unterrichtsprofil/">Unterrichtsprofil</a>
+  <a href="/Portrait/Unterrichtsprofil/">
+    Unterrichtsprofil
+  </a>
 </li>
 <li id="Fordern und Foerdern">
-  <a href="/Portrait/Fordern-und-Foerdern/">Fordern und Fördern</a>
+  <a href="/Portrait/Fordern-und-Foerdern/">
+    Fordern und Fördern
+  </a>
 </li>
 <li id="Aktivitaeten">
-  <a href="/Portrait/Aktivitaeten/">Aktivitäten</a>
+  <a href="/Portrait/Aktivitaeten/">
+    Aktivitäten
+  </a>
 </li>
 <li id="Nachmittagsbetreuung">
-  <a href="/Portrait/Nachmittagsbetreuung/">Nachmittagsbetreuung</a>
+  <a href="/Portrait/Nachmittagsbetreuung/">
+    Nachmittagsbetreuung
+  </a>
 </li>
 <li id="Geschichte-des-FEG">
-  <a href="/Portrait/Geschichte-des-FEG/">Geschichte des FEG</a>
+  <a href="/Portrait/Geschichte-des-FEG/">
+    Geschichte des FEG
+  </a>
 </li>
-<li>
-  <a href="/Portrait/FEG-Forum/" id="FEG-Forum">FEG-Forum</a>
+<li id="FEG-Forum">
+  <a href="/Portrait/FEG-Forum/">
+    FEG-Forum
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Schueleraustausch/" id="Schueleraustausch">Schüleraustausch</a>
+<li id="Schueleraustausch">
+  <a href="/Portrait/Schueleraustausch/">
+    Schüleraustausch
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Stuetzpunktschule-NwT/" id="Stuetzpunktschule-NwT">Stützpunktschule NwT</a>
+<li id="Stuetzpunktschule-NwT">
+  <a href="/Portrait/Stuetzpunktschule-NwT/">
+    Stützpunktschule NwT
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Schuelerfirma/" id="Schuelerfirma">Schülerfirma</a>
+<li id="Schuelerfirma">
+  <a href="/Portrait/Schuelerfirma/">
+    Schülerfirma
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Streitschlichter/" id="Streitschlichter">Streitschlichter</a>
+<li id="Streitschlichter">
+  <a href="/Portrait/Streitschlichter/">
+    Streitschlichter
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Grundschul-Kooperation/" id="Grundschul-Kooperation">Grundschul-Kooperation</a>
+<li id="Grundschul-Kooperation">
+  <a href="/Portrait/Grundschul-Kooperation/">
+    Grundschul-Kooperation
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Methodentag/" id="Methodentag">Methodentag</a>
+<li id="Methodentag">
+  <a href="/Portrait/Methodentag/">
+    Methodentag
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Info-für-Grundschuleltern/" id="Info-für-Grundschuleltern">Info für Grundschuleltern</a>
+<li id="Info-für-Grundschuleltern">
+  <a href="/Portrait/Info-für-Grundschuleltern/">
+    Info für Grundschuleltern
+  </a>
 </li>
-<li>
-  <a href="/Portrait/MINT-am-FEG/" id="MINT-am-FEG">MINT am FEG</a>
+<li id="MINT-am-FEG">
+  <a href="/Portrait/MINT-am-FEG/">
+    MINT am FEG
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Orientierungspraktikum/" id="Orientierungspraktikum">Orientierungspraktikum</a>
+<li id="Orientierungspraktikum">
+  <a href="/Portrait/Orientierungspraktikum/">
+    Orientierungspraktikum
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Beratungslehrer/" id="Beratungslehrer">Beratungslehrer</a>
+<li id="Beratungslehrer">
+  <a href="/Portrait/Beratungslehrer/">
+    Beratungslehrer
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Schulsanitaetsdienst/" id="Schulsanitätsdienst">Schulsanitätsdienst</a>
+<li id="Schulsanitätsdienst">
+  <a href="/Portrait/Schulsanitaetsdienst/">
+    Schulsanitätsdienst
+  </a>
 </li>
-
