--- a/sidebar/portrait_Geschichte-des-FEG.html
+++ b/sidebar/portrait_Geschichte-des-FEG.html
@@ -1,65 +1,112 @@
-<li>
-  <a href="/Portrait/Begruessung/" id="Begruessung">Begrüßung</a>
+<li id="Begruessung">
+  <a href="/Portrait/Begruessung/">
+    Begrüßung
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Kollegium/" id="Kollegium">Kollegium</a>
+<li id="Kollegium">
+  <a href="/Portrait/Kollegium/">
+    Kollegium
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Selbstverstaendnis/" id="Selbstverstaendnis">Selbstverständnis</a>
+<li id="Selbstverstaendnis">
+  <a href="/Portrait/Selbstverstaendnis/">
+    Selbstverständnis
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Unterrichtsprofil/" id="Unterrichtsprofil">Unterrichtsprofil</a>
+<li id="Unterrichtsprofil">
+  <a href="/Portrait/Unterrichtsprofil/">
+    Unterrichtsprofil
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Fordern-und-Foerdern/" id="Fordern und Foerdern">Fordern und Fördern</a>
+<li id="Fordern und Foerdern">
+  <a href="/Portrait/Fordern-und-Foerdern/">
+    Fordern und Fördern
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Aktivitaeten/" id="Aktivitaeten">Aktivitäten</a>
+<li id="Aktivitaeten">
+  <a href="/Portrait/Aktivitaeten/">
+    Aktivitäten
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Nachmittagsbetreuung/" id="Nachmittagsbetreuung">Nachmittagsbetreuung</a>
+<li id="Nachmittagsbetreuung">
+  <a href="/Portrait/Nachmittagsbetreuung/">
+    Nachmittagsbetreuung
+  </a>
 </li>
-<li class="active">
-  <a href="/Portrait/Geschichte-des-FEG/" id="Geschichte-des-FEG">Geschichte des FEG</a>
+<li  id="Nachmittagsbetreuung" class="active">
+  <a href="/Portrait/Geschichte-des-FEG/">
+    Geschichte des FEG
+  </a>
   <ul class="nav">
-    <li><a href="/Portrait/Geschichte-des-FEG/1/" id="Geschichte-des-FEG/1">Gerhard Schlecht</a></li>
-    <li><a href="/Portrait/Geschichte-des-FEG/2/"id="Geschichte-des-FEG/2">Dr. Werner Abelein</a></li>
+    <li id="Geschichte-des-FEG/1">
+      <a href="/Portrait/Geschichte-des-FEG/1/">
+        Gerhard Schlecht
+      </a>
+    </li>
+    <li id="Geschichte-des-FEG/2">
+      <a href="/Portrait/Geschichte-des-FEG/2/">
+        Dr. Werner Abelein
+      </a>
+    </li>
   </ul>
 </li>
-<li>
-  <a href="/Portrait/FEG-Forum/" id="FEG-Forum">FEG-Forum</a>
+<li id="FEG-Forum" >
+  <a href="/Portrait/FEG-Forum/">
+    FEG-Forum
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Schueleraustausch/" id="Schueleraustausch">Schüleraustausch</a>
+<l id="Schueleraustausch"i>
+  <a href="/Portrait/Schueleraustausch/">
+    Schüleraustausch
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Stuetzpunktschule-NwT/" id="Stuetzpunktschule-NwT">Stützpunktschule NwT</a>
+<li id="Stuetzpunktschule-NwT">
+  <a href="/Portrait/Stuetzpunktschule-NwT/">
+    Stützpunktschule NwT
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Schuelerfirma/" id="Schuelerfirma">Schülerfirma</a>
+<li id="Schuelerfirma">
+  <a href="/Portrait/Schuelerfirma/">
+    Schülerfirma
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Streitschlichter/" id="Streitschlichter">Streitschlichter</a>
+<li id="Streitschlichter">
+  <a href="/Portrait/Streitschlichter/">
+    Streitschlichter
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Grundschul-Kooperation/" id="Grundschul-Kooperation">Grundschul-Kooperation</a>
+<li id="Grundschul-Kooperation">
+  <a href="/Portrait/Grundschul-Kooperation/">
+    Grundschul-Kooperation
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Methodentag/" id="Methodentag">Methodentag</a>
+<li id="Methodentag">
+  <a href="/Portrait/Methodentag/">
+    Methodentag
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Info-für-Grundschuleltern/" id="Info-für-Grundschuleltern">Info für Grundschuleltern</a>
+<li id="Info-für-Grundschuleltern">
+  <a href="/Portrait/Info-für-Grundschuleltern/">
+    Info für Grundschuleltern
+  </a>
 </li>
-<li>
-  <a href="/Portrait/MINT-am-FEG/" id="MINT-am-FEG">MINT am FEG</a>
+<li id="MINT-am-FEG">
+  <a href="/Portrait/MINT-am-FEG/">
+    MINT am FEG
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Orientierungspraktikum/" id="Orientierungspraktikum">Orientierungspraktikum</a>
+<li id="Orientierungspraktikum">
+  <a href="/Portrait/Orientierungspraktikum/">
+    Orientierungspraktikum
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Beratungslehrer/" id="Beratungslehrer">Beratungslehrer</a>
+<li id="Beratungslehrer">
+  <a href="/Portrait/Beratungslehrer/">
+    Beratungslehrer
+  </a>
 </li>
-<li>
-  <a href="/Portrait/Schulsanitaetsdienst/" id="Schulsanitätsdienst">Schulsanitätsdienst</a>
+<li id="Schulsanitätsdienst">
+  <a href="/Portrait/Schulsanitaetsdienst/">
+    Schulsanitätsdienst
+  </a>
 </li>
-
