--- a/sidebar/portrait_Geschichte-des-FEG.html
+++ b/sidebar/portrait_Geschichte-des-FEG.html
@@ -55,7 +55,7 @@
     FEG-Forum
   </a>
 </li>
-<l id="Schueleraustausch"i>
+<li id="Schueleraustausch"i>
   <a href="/Portrait/Schueleraustausch/">
     Schüleraustausch
   </a>
