--- a/sidebar/ehemalige.html
+++ b/sidebar/ehemalige.html
@@ -1,6 +1,6 @@
-<li>
-  <a href="/Ehemalige/Ehemalige/" id="Ehemalige">Ehemalige</a>
+<li id="Ehemalige">
+  <a href="/Ehemalige/Ehemalige/">Ehemalige</a>
 </li>
-<li>
-  <a href="/Ehemalige/Verein/" id="Verein">Verein</a>
+<li id="Verein">
+  <a href="/Ehemalige/Verein/">Verein</a>
 </li>
