--- a/sidebar/galerie.html
+++ b/sidebar/galerie.html
@@ -1,3 +1,3 @@
-<li>
-  <a href="/Galerie/Vermischtes/" id="Vermischtes">Vermischtes</a>
+<li id="Vermischtes">
+  <a href="/Galerie/Vermischtes/">Vermischtes</a>
 </li>
