--- a/sidebar/impressum.html
+++ b/sidebar/impressum.html
@@ -1,18 +1,40 @@
-<li>
-  <a href="/Impressum/Kontakt/" id="Kontakt"><i class="fa fa-envelope"></i> Kontakt</a>
+<li id="Kontakt">
+  <a href="/Impressum/Kontakt/">
+    <i class="fa fa-envelope">
+    </i>
+    Kontakt
+  </a>
 </li>
-<li>
-  <a href="/Impressum/Impressum/" id="Impressum"><i class="fa fa-pencil-square-o"></i> Impressum</a>
+<li id="Impressum">
+  <a href="/Impressum/Impressum/">
+    <i class="fa fa-pencil-square-o">
+    </i>
+    Impressum
+  </a>
 </li>
-<li>
-  <a href="/Impressum/Anfahrt/" id="Anfahrt"><i class="fa fa-road"></i> Anfahrt</a>
+<li id="Anfahrt">
+  <a href="/Impressum/Anfahrt/">
+    <i class="fa fa-road">
+    </i>
+    Anfahrt
+  </a>
 </li>
-<li>
-  <a href="/Impressum/Routenplaner/" id="Routenplaner"><i class="fa fa-compass"></i> Routenplaner</a>
+<li id="Routenplaner">
+  <a href="/Impressum/Routenplaner/">
+    <i class="fa fa-compass">
+    </i>
+    Routenplaner
+  </a>
 </li>
-<li>
-  <a href="/Impressum/Unterrichtszeiten/" id="Unterrichtszeiten"><i class="fa fa-clock-o"></i> Unterrichtszeiten</a>
+<li id="Unterrichtszeiten">
+  <a href="/Impressum/Unterrichtszeiten/">
+    <i class="fa fa-clock-o">
+    </i>
+    Unterrichtszeiten
+  </a>
 </li>
-<li>
-  <a href="/Impressum/Statistiken/" id="Statistiken"> Statistiken</a>
+<li id="Statistiken">
+  <a href="/Impressum/Statistiken/">
+    Statistiken
+  </a>
 </li>
