--- a/sidebar/schulleben.html
+++ b/sidebar/schulleben.html
@@ -1,9 +1,4 @@
-<li>
-  <a href="/Schulleben/Aktuelles/" id="Aktuelles">Aktuelles</a>
+<li id="Aktuelles">
+  <a href="/Schulleben/Aktuelles/">Aktuelles</a>
 </li>
-<li>
-  <a href="">Studienfahrten</a>
-  <ul class="nav">
-    <li class="active"><a id="SF-Prag">Studienfahrt nach Prag</a></li>
-  </ul>
-</li>
+
