--- a/sidebar/portrait_Geschichte-des-FEG.html
+++ b/sidebar/portrait_Geschichte-des-FEG.html
@@ -33,7 +33,7 @@
     Nachmittagsbetreuung
   </a>
 </li>
-<li  id="Nachmittagsbetreuung" class="active">
+<li  id="Geschichte-des-FEG" class="active">
   <a href="/Portrait/Geschichte-des-FEG/">
     Geschichte des FEG
   </a>
