--- a/sidebar/portrait.html
+++ b/sidebar/portrait.html
@@ -33,10 +33,22 @@
     Nachmittagsbetreuung
   </a>
 </li>
-<li id="Geschichte-des-FEG">
+<li  id="Geschichte-des-FEG" class="active">
   <a href="/Portrait/Geschichte-des-FEG/">
     Geschichte des FEG
   </a>
+  <ul class="nav">
+    <li id="Geschichte-des-FEG/1">
+      <a href="/Portrait/Geschichte-des-FEG/1/">
+        Gerhard Schlecht
+      </a>
+    </li>
+    <li id="Geschichte-des-FEG/2">
+      <a href="/Portrait/Geschichte-des-FEG/2/">
+        Dr. Werner Abelein
+      </a>
+    </li>
+  </ul>
 </li>
 <li id="FEG-Forum">
   <a href="/Portrait/FEG-Forum/">
