--- a/sidebar/portrait.html
+++ b/sidebar/portrait.html
@@ -33,7 +33,7 @@
     Nachmittagsbetreuung
   </a>
 </li>
-<li  id="Geschichte-des-FEG" class="active">
+<li  id="Geschichte-des-FEG">
   <a href="/Portrait/Geschichte-des-FEG/">
     Geschichte des FEG
   </a>
