--- a/footer.html
+++ b/footer.html
@@ -23,8 +23,8 @@
 
         <!-- Unter-Navigation -->
         <script>
-            var myObj = document.getElementById("{{ page.title }}");
-                myObj.className = "active";
+            navigation.name = "{{ page.title }}");
+            navigation.light();
         </script>
     </body>
 </html>
