--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
 
         <!-- Unter-Navigation -->
         <script>
-            navigation.name = "{{ page.title }}");
+            navigation.name = "{{ page.title }}";
             navigation.light();
         </script>
     </body>
