--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
 
         <!-- Unter-Navigation -->
         <script>
-        var navigation    = new Object;
+        var unternavigation    = new Object;
 unternavigation.name   = "";
 unternavigation.light  = function()
 {
