--- a/footer.html
+++ b/footer.html
@@ -30,8 +30,8 @@ unternavigation.light  = function()
   var myObj = document.getElementById(unternavigation.name);
   myObj.className = "active";
 };
-            navigation.name = "{{ page.title }}";
-            navigation.light();
+            unternavigation.name = "{{ page.title }}";
+            unternavigation.light();
         </script>
     </body>
 </html>
