--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
 
         <!-- Unter-Navigation -->
         <script>
-function()
+function unternavigation()
 {
 this.name = "";
   var myObj = document.getElementById(unternavigation.name);
