--- a/footer.html
+++ b/footer.html
@@ -26,7 +26,7 @@
 function unternavigation()
 {
 this.name = "{{ page.title }}";
-  var myObj = document.getElementById(unternavigation.name);
+  var myObj = document.getElementById(this.name);
   myObj.className = "active";
 };
             unternavigation();
