--- a/footer.html
+++ b/footer.html
@@ -23,13 +23,12 @@
 
         <!-- Unter-Navigation -->
         <script>
-function unternavigation()
-{
-this.name = "{{ page.title }}";
-  var myObj = document.getElementById(this.name);
-  myObj.className = "active";
+function unternavigation() {
+    this.name = "{{ page.title }}";
+    var myObj = document.getElementById(this.name);
+    myObj.className = "active";
 };
-            unternavigation();
+
         </script>
     </body>
 </html>
