--- a/footer.html
+++ b/footer.html
@@ -24,7 +24,7 @@
         <!-- Unter-Navigation -->
         <script>
 function unternavigation(name) {
-    var myObj = document.getElementById(this.name);
+    var myObj = document.getElementById(name);
     myObj.className = "active";
 };
 unternavigation("{{ page.title }}");
