--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
 
         <!-- Unter-Navigation -->
         <script>
-            unternavigation("{{ page.title }}");
+            unternavigation.init("{{ page.title }}");
         </script>
     </body>
 </html>
