--- a/sidebar/portrait.html
+++ b/sidebar/portrait.html
@@ -18,8 +18,8 @@
     Unterrichtsprofil
   </a>
 </li>
-<li id="Fordern und Foerdern">
-  <a href="/Portrait/Fordern-und-Foerdern/">
+<li id="Fordern_und_Foerdern">
+  <a href="/Portrait/Fordern_und_Foerdern/">
     Fordern und Fördern
   </a>
 </li>
@@ -33,25 +33,25 @@
     Nachmittagsbetreuung
   </a>
 </li>
-<li  id="Geschichte-des-FEG">
-  <a href="/Portrait/Geschichte-des-FEG/">
+<li  id="Geschichte_des_FEG">
+  <a href="/Portrait/Geschichte_des_FEG/">
     Geschichte des FEG
   </a>
   <ul class="nav">
-    <li id="Geschichte-des-FEG/1">
-      <a href="/Portrait/Geschichte-des-FEG/1/">
+    <li id="Geschichte_des_FEG/1">
+      <a href="/Portrait/Geschichte_des_FEG/1/">
         Gerhard Schlecht
       </a>
     </li>
-    <li id="Geschichte-des-FEG/2">
-      <a href="/Portrait/Geschichte-des-FEG/2/">
+    <li id="Geschichte_des_FEG/2">
+      <a href="/Portrait/Geschichte_des_FEG/2/">
         Dr. Werner Abelein
       </a>
     </li>
   </ul>
 </li>
-<li id="FEG-Forum">
-  <a href="/Portrait/FEG-Forum/">
+<li id="FEG_Forum">
+  <a href="/Portrait/FEG_Forum/">
     FEG-Forum
   </a>
 </li>
@@ -60,8 +60,8 @@
     Schüleraustausch
   </a>
 </li>
-<li id="Stuetzpunktschule-NwT">
-  <a href="/Portrait/Stuetzpunktschule-NwT/">
+<li id="Stuetzpunktschule_NwT">
+  <a href="/Portrait/Stuetzpunktschule_NwT/">
     Stützpunktschule NwT
   </a>
 </li>
@@ -75,8 +75,8 @@
     Streitschlichter
   </a>
 </li>
-<li id="Grundschul-Kooperation">
-  <a href="/Portrait/Grundschul-Kooperation/">
+<li id="Grundschul_Kooperation">
+  <a href="/Portrait/Grundschul_Kooperation/">
     Grundschul-Kooperation
   </a>
 </li>
@@ -85,13 +85,13 @@
     Methodentag
   </a>
 </li>
-<li id="Info-für-Grundschuleltern">
-  <a href="/Portrait/Info-für-Grundschuleltern/">
+<li id="Info_für_Grundschuleltern">
+  <a href="/Portrait/Info_für_Grundschuleltern/">
     Info für Grundschuleltern
   </a>
 </li>
-<li id="MINT-am-FEG">
-  <a href="/Portrait/MINT-am-FEG/">
+<li id="MINT_am_FEG">
+  <a href="/Portrait/MINT_am_FEG/">
     MINT am FEG
   </a>
 </li>
