--- a/footer.html
+++ b/footer.html
@@ -1,30 +1,64 @@
-                    <br><i class="fa fa-arrow-up"></i> <a href="#nachoben">nach oben</a> | <i class="fa fa-arrow-left"></i> <a href="javascript:history.back()" onmouseover="{window.status='Zurück'; return true;}">zurück</a><p>&nbsp;</p></p>
-                        <div class="footer">
-                            <a href="https://github.com/feg-stuttgart"><i class="fa fa-github fa-1g"></i> Auf Github anzeigen</a>
-                            <p>&copy; Friedrich-Eugens-Gymnasium Stuttgart 2013</p>
-                        </div>
-                    </div><!-- ./Inhalt -->
-                </div>
-            </div>
-        </div>
-        
+<br>
+<i class="fa fa-arrow-up">
+</i>
 
-        <!-- Dialog der Bilder-Galerie -->
-        <div id="blueimp-gallery" class="blueimp-gallery">
-            <div class="slides"></div>
-                <h3 class="title"></h3>
-                <a class="prev">‹</a>
-                <a class="next">›</a>
-                <a class="close">×</a>
-                <a class="play-pause"></a>
-                <ol class="indicator"></ol>
-            </div>
-        </div>
+<a href="#nachoben">
+  nach oben
+</a>
+| 
+<i class="fa fa-arrow-left">
+</i>
 
-        <!-- Unter-Navigation -->
-        <script>
+<a href="javascript:history.back()" onmouseover="{window.status='Zurück'; return true;}">
+  zurück
+</a>
+<p>
+  &nbsp;
+</p>
+</p>
+<div class="footer">
+  <a href="https://github.com/feg-stuttgart">
+    <i class="fa fa-github fa-1g">
+    </i>
+    Auf Github anzeigen
+  </a>
+  <p>
+    &copy; Friedrich-Eugens-Gymnasium Stuttgart 2013
+  </p>
+</div>
+</div>
+<!-- ./Inhalt -->
+</div>
+</div>
+</div>
+
+
+<!-- Dialog der Bilder-Galerie -->
+<div id="blueimp-gallery" class="blueimp-gallery">
+  <div class="slides">
+  </div>
+  <h3 class="title">
+  </h3>
+  <a class="prev">
+    ‹
+  </a>
+  <a class="next">
+    ›
+  </a>
+  <a class="close">
+    ×
+  </a>
+  <a class="play-pause">
+  </a>
+  <ol class="indicator">
+  </ol>
+</div>
+</div>
+
+<!-- Unter-Navigation -->
+<script>
   var myObj = document.getElementById("{{ page.title }}");
-  myObj.className = "active";
-        </script>
-    </body>
+          myObj.className = "active";
+</script>
+</body>
 </html>
