--- a/head.html
+++ b/head.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     
     <!-- All-in-one-JS -->
-    <script async type="text/javascript" src="http://feg.cdnconnect.com/js/index.js">
+    <script type="text/javascript" src="http://feg.cdnconnect.com/js/index.js" async>
     </script>
     
   </head>
