--- a/sidebar/portrait.html
+++ b/sidebar/portrait.html
@@ -61,52 +61,52 @@
   </a>
 </li>
 <li id="Stuetzpunktschule_NwT">
-  <a href="/Portrait/Stuetzpunktschule_NwT/">
+  <a href="#/Portrait/Stuetzpunktschule_NwT/">
     Stützpunktschule NwT
   </a>
 </li>
 <li id="Schuelerfirma">
-  <a href="/Portrait/Schuelerfirma/">
+  <a href="#/Portrait/Schuelerfirma/">
     Schülerfirma
   </a>
 </li>
 <li id="Streitschlichter">
-  <a href="/Portrait/Streitschlichter/">
+  <a href="#/Portrait/Streitschlichter/">
     Streitschlichter
   </a>
 </li>
 <li id="Grundschul_Kooperation">
-  <a href="/Portrait/Grundschul_Kooperation/">
+  <a href="#/Portrait/Grundschul_Kooperation/">
     Grundschul-Kooperation
   </a>
 </li>
 <li id="Methodentag">
-  <a href="/Portrait/Methodentag/">
+  <a href="#/Portrait/Methodentag/">
     Methodentag
   </a>
 </li>
 <li id="Info_für_Grundschuleltern">
-  <a href="/Portrait/Info_für_Grundschuleltern/">
+  <a href="#/Portrait/Info_für_Grundschuleltern/">
     Info für Grundschuleltern
   </a>
 </li>
 <li id="MINT_am_FEG">
-  <a href="/Portrait/MINT_am_FEG/">
+  <a href="#/Portrait/MINT_am_FEG/">
     MINT am FEG
   </a>
 </li>
 <li id="Orientierungspraktikum">
-  <a href="/Portrait/Orientierungspraktikum/">
+  <a href="#/Portrait/Orientierungspraktikum/">
     Orientierungspraktikum
   </a>
 </li>
 <li id="Beratungslehrer">
-  <a href="/Portrait/Beratungslehrer/">
+  <a href="#/Portrait/Beratungslehrer/">
     Beratungslehrer
   </a>
 </li>
 <li id="Schulsanitätsdienst">
-  <a href="/Portrait/Schulsanitaetsdienst/">
+  <a href="#/Portrait/Schulsanitaetsdienst/">
     Schulsanitätsdienst
   </a>
 </li>
