--- a/footer.html
+++ b/footer.html
@@ -57,8 +57,7 @@
 
 <!-- Unter-Navigation -->
 <script>
-  var myObj = document.getElementById("{{ page.title }}");
-          myObj.className = "active";
+  highlight("{{ page.title }}");
 </script>
 </body>
 </html>
