--- a/head.html
+++ b/head.html
@@ -3,7 +3,8 @@
   <head>
       
     <!-- All-in-one-JS -->
-    <script type="text/javascript" src="http://feg.cdnconnect.com/js/func.js" async>LoadIndex();</script>
+    <script type="text/javascript" src="http://feg.cdnconnect.com/js/func.js" async></script>
+    <script type="text/javascript">LoadIndex();</script>
     
     <title>
       FEG | Friedrich-Eugens-Gymnasium Stuttgart
