--- a/footer.html
+++ b/footer.html
@@ -55,8 +55,9 @@
 </div>
 </div>
 
-<!-- Unter-Navigation -->
-<script>
+<!-- Funktionen -->
+<script type="text/javascript">
+  LoadIndex();
   highlight("{{ page.title }}");
 </script>
 </body>
