--- a/head.html
+++ b/head.html
@@ -3,7 +3,7 @@
   <head>
       
     <!-- All-in-one-JS -->
-    <script type="text/javascript" src="http://feg.cdnconnect.com/js/func.js" async></script>
+    <script type="text/javascript">function LoadIndex(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/index.js",b.async="async",a.parentNode.insertBefore(b,a)}function LoadGallery(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/gallery.js",b.async="async",a.parentNode.insertBefore(b,a)}function highlight(a){var b=document.getElementById(a);b.className="active"}</script>
 
     <title>
       FEG | Friedrich-Eugens-Gymnasium Stuttgart
