--- a/head.html
+++ b/head.html
@@ -23,10 +23,9 @@
     <!-- Icons -->
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     
-    <!-- Funktionen -->
+    <!-- Basis-JS -->
     <script type="text/javascript">
       LoadIndex();
-      highlight("{{ page.title }}");
     </script>
     
   </head>
