--- a/head.html
+++ b/head.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     
-    <!-- All-in-one-JS -->
+    <!-- Loader-JS -->
     <script type="text/javascript">
       function LoadIndex(){
         var a=document.getElementsByTagName("script")[0],b=document.createElement("script");
