--- a/head.html
+++ b/head.html
@@ -23,7 +23,7 @@
     
     <!-- Basis-JS -->
     <script type="text/javascript">
-      LoadIndex();
+      LoadIndexjs();
     </script>
     
   </head>
