--- a/head.html
+++ b/head.html
@@ -4,7 +4,7 @@
     
     <!-- Loader-JS -->
     <script type="text/javascript">
-      function LoadIndex(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/index.js",b.async="async",a.parentNode.insertBefore(b,a)}function LoadGallery(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/gallery.js",a.parentNode.insertBefore(b,a)}function highlight(a){var b=document.getElementById(a);b.className="active"}
+      function LoadIndexjs(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/index.js",b.async="async",a.parentNode.insertBefore(b,a)}function LoadGalleryjs(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/gallery.js",a.parentNode.insertBefore(b,a)}function highlight(a){var b=document.getElementById(a);b.className="active"}
     </script>
     
     <title>
