--- a/head.html
+++ b/head.html
@@ -4,7 +4,7 @@
     
     <!-- Loader-JS -->
     <script type="text/javascript">
-      function LoadIndexjs(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/index.js",b.async="async",a.parentNode.insertBefore(b,a)}function LoadGalleryjs(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/gallery.js",a.parentNode.insertBefore(b,a)}function highlight(a){var b=document.getElementById(a);b.className="active"}
+      function LoadIndexJS(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/index.js",b.async="async",a.parentNode.insertBefore(b,a)}function LoadIndexCSS(){var a=document.getElementsByTagName("link")[0],b=document.createElement("link");b.rel="stylesheet",b.type="text/css",b.href="http://feg.cdnconnect.com/css/index.css",a.parentNode.insertBefore(b,a)}function LoadGalleryJS(){var a=document.getElementsByTagName("script")[0],b=document.createElement("script");b.type="text/javascript",b.src="http://feg.cdnconnect.com/js/gallery.js",a.parentNode.insertBefore(b,a)}function highlight(a){var b=document.getElementById(a);b.className="active"}
     </script>
     
     <title>
