--- a/head.html
+++ b/head.html
@@ -38,7 +38,7 @@
         <br>
         <ul class="nav nav-justified">
           <li id="Navigation_Startseite">
-            <a href="#">
+            <a href="/">
               <i class="fa fa-home">
               </i>
               Startseite
