--- a/head.html
+++ b/head.html
@@ -31,7 +31,7 @@
       <!--Navigation -->
       <div class="masthead">
         <a href="/">
-          <img src="http://feg.cdnconnect.com/img/logo.gif">
+          <img alt="Startseite" src="http://feg.cdnconnect.com/img/logo.gif">
         </a>
         <br>
         <br>
