--- a/head.html
+++ b/head.html
@@ -14,7 +14,7 @@
       FEG | Friedrich-Eugens-Gymnasium Stuttgart
     </title>
     
-    <link>
+    <link/>
     
     <script type="text/javascript">
       LoadIndexJS();        //Basis-CSS
@@ -33,8 +33,8 @@
         <a href="/">
           <img alt="Startseite" src="http://feg.cdnconnect.com/img/logo.gif">
         </a>
-        <br>
-        <br>
+        <br/>
+        <br/>
         <ul class="nav nav-justified">
           <li id="Navigation_Startseite">
             <a href="/">
