--- a/footer.html
+++ b/footer.html
@@ -24,6 +24,9 @@
 </div>
 </div>
 <!-- ./Inhalt -->
+</div>
+</div>
+</div>
 
 <!-- Dialog der Bilder-Galerie -->
 <div id="blueimp-gallery" class="blueimp-gallery">
@@ -45,7 +48,7 @@
   <ol class="indicator">
   </ol>
 </div>
-
+</div>
 <script type="text/javascript">
   highlight("{{ page.title }}");
 </script>
