--- a/footer.html
+++ b/footer.html
@@ -35,7 +35,7 @@
   <h3 class="title">
   </h3>
   <a class="prev">
-    ‹
+    <i class="fa fa-chevron-left"></i>
   </a>
   <a class="next">
     ›
