--- a/head.html
+++ b/head.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img alt="Startseite" src="http://feg.cdnconnect.com/img/logo.gif"></a>
+          <a class="navbar-brand" href="/">FEG-Stuttgart</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
