--- a/head.html
+++ b/head.html
@@ -39,7 +39,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li id="Navigation_Startseite"><a href="/"><i class="fa fa-home"></i> Startseite</a></li>
-            <li id="Navigation_Portrait"><a href="/Portrait/">Portrait</a></li>
+            <li id="Navigation_Portrait"><a href="/Portrait/"><b>Portrait</b></a></li>
             <li id="Navigation_Schulleben"><a href="/Schulleben/">Schulleben</a></li>
             <li id="Navigation_Ehemalige"><a href="/Ehemalige/">Ehemalige</a></li>
             <li id="Navigation_Galerie"><a href="/Galerie/"><i class="fa fa-film"></i> Galerie</a></li>
